k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk014-deploy-test
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk014-deploy-test
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 7d17f87c0ce4f1755edc366ef26b93e0
      labels:
        app: sk014-deploy-test
    spec:
      serviceAccountName: default
      containers:
      - name: deploy-test
        image: amdp-registry.skala-ai.com/skala25a/sk014-deploy-test:1.0.0
        imagePullPolicy: Always
