k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk014-tls-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  tls:
  - hosts:
    - sk014-tls.skala25a.project.skala-ai.com
    secretName: sk014-manual-tls-secret
  rules:
  - host: sk014-tls.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk014-deploy-test
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: sk014-deploy-test
            port:
              number: 8081
        path: /actuator
        pathType: Prefix
      - backend:
          service:
            name: sk014-deploy-test
            port:
              number: 8080
        path: /swagger
        pathType: Prefix
